# apds9960-rs

./: .travis.yml  CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: build.yml
examples/: linux.rs
src/: config.rs  lib.rs  light.rs  proximity.rs  reading.rs
src/async/: config.rs  light.rs  mod.rs  proximity.rs  reading.rs
src/async/gesture/: config.rs  mod.rs  reading.rs
src/gesture/: config.rs  reading.rs
tests/: gesture.rs  interface.rs  light.rs  proximity.rs
tests/common/: mod.rs
