[package]
name = "apds9960"
version = "0.1.0"
edition = "2018"
authors = ["Diego Barrios Romero <eldruin@gmail.com>"]
repository = "https://github.com/eldruin/apds9960-rs"
license = "MIT OR Apache-2.0"
description = "Platform-agnostic Rust driver for the APDS9960 digital proximity, ambient light, RGB and gesture sensor."
readme = "README.md"
keywords = ["proximity", "light", "gesture", "sensor", "embedded-hal-driver"]
categories = ["embedded", "hardware-support", "no-std"]
homepage = "https://github.com/eldruin/apds9960-rs"
documentation = "https://docs.rs/apds9960"
include = [
    "**/*.rs",
    "/Cargo.toml",
    "/README.md",
    "/CHANGELOG.md",
    "/LICENSE-MIT",
    "/LICENSE-APACHE",
]

[features]
default = ["nb", "linux-embedded-hal"]
nightly = ["async"]
async = ["embedded-hal-async"]

[dependencies]
embedded-hal = "0.2.5"
embedded-hal-async = { version = "0.1.0-alpha.1", optional = true }
linux-embedded-hal = { version = "0.3", optional = true }
maybe-async-cfg = "0.2.1"
nb = { version = "1", optional = true }

[dev-dependencies]
embedded-hal-mock = "0.7"

[profile.release]
lto = true

[[example]]
name = "linux"
required-features = ["nb", "linux-embedded-hal"]

[[test]]
name = "gesture"
required-features = ["nb"]

[[test]]
name = "interface"
required-features = ["nb"]

[[test]]
name = "light"
required-features = ["nb"]

[[test]]
name = "proximity"
required-features = ["nb"]
